ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-service-ingress
  annotations:
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: micro-service-lb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
          - path: /mobile/
            pathType: Prefix
            backend:
              service:
                name: mobilepage
                port:
                  number: 80
          - path: /laptop/
            pathType: Prefix
            backend:
              service:
                name: laptoppage
                port:
                  number: 80
